Issue #123 Font Size
I adjusted the font size, line weight, and line height to make the
paragraph text a little more visible. In Chrome I had no problem seeing
it, but on Mac the text was a bit hard to read. It should read across
the site for p and p.large.

--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -43,12 +43,12 @@ h3{
 }
 
 p{
-  font-size: .8rem;
+  font-size: 1.025rem;
   font-weight: 300;
   letter-spacing: .05rem;
   color: $gray;
-  line-weight: .1rem;
-  line-height: 1.3rem;
+  line-weight: .3rem;
+  line-height: 1.5rem;
   a{
     font-style: italic;
     color: $gold;
@@ -63,7 +63,7 @@ a {
 }
 
 .large{
-  font-size: 1rem;
+  font-size: 1.035rem;
   line-height: 1.65rem;
 }
 
